@@ -1,3 +1,6 @@
+14 April 2016: Wouter
+	- cachedb module framework (empty).
+
 12 April 2016: Wouter
 	- Fix #753: document dump_requestlist is for first thread.
 
